tests/regression/errors/basic/type_error_23.csd
// Type error test 23
sus number drip = 23
sus text tea = "string_23"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 23:", wrong)
